# xmradio

./: CMakeLists.txt
src/: CMakeLists.txt  global.h
src/player/: CMakeLists.txt  player_export.h  xmediaplayer.h  xmediaplayer_vlc.cpp  xmediaplayer_vlc.h
src/utils/: CMakeLists.txt  utils.cpp  utils.h  utils_export.h  xlibhelper.cpp  xlibhelper.h
test/: CMakeLists.txt  test_player.cpp
